--- a/Colab_github_test.ipynb
+++ b/Colab_github_test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Colab_github_test.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPSr0L/5PFtuOfR3oB7I2ex",
+      "authorship_tag": "ABX9TyM9qKNoRVsC11sHqKYZa/FR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4744,34 +4744,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vCegmZuGeht-",
-        "outputId": "c923a479-ac71-4ed2-8719-dd2adc4c353c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "vCegmZuGeht-"
       },
       "source": [
-        "intention_to_leave = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [intention_to_leave_q1.children[1].value,intention_to_leave_q2.children[1].value]])\r\n",
-        "overall_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [overall_sat_q1.children[1].value,overall_sat_q2.children[1].value]])\r\n",
-        "learning_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [learning_sat_q1.children[1].value,learning_sat_q2.children[1].value]])\r\n",
-        "boss_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [boss_sat_q1.children[1].value,boss_sat_q2.children[1].value]])\r\n",
-        "salary_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [salary_sat_q1.children[1].value,salary_sat_q2.children[1].value]])\r\n",
-        "social_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [social_sat_q1.children[1].value,social_sat_q2.children[1].value]])\r\n",
-        "achievement_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [achievement_sat_q1.children[1].value,achievement_sat_q2.children[1].value]])\r\n",
-        "work_life_bal_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [work_life_bal_sat_q1.children[1].value,work_life_bal_sat_q2.children[1].value]])\r\n",
+        "# intention_to_leave = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [intention_to_leave_q1.children[1].value,intention_to_leave_q2.children[1].value]])\r\n",
+        "# overall_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [overall_sat_q1.children[1].value,overall_sat_q2.children[1].value]])\r\n",
+        "# learning_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [learning_sat_q1.children[1].value,learning_sat_q2.children[1].value]])\r\n",
+        "# boss_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [boss_sat_q1.children[1].value,boss_sat_q2.children[1].value]])\r\n",
+        "# salary_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [salary_sat_q1.children[1].value,salary_sat_q2.children[1].value]])\r\n",
+        "# social_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [social_sat_q1.children[1].value,social_sat_q2.children[1].value]])\r\n",
+        "# achievement_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [achievement_sat_q1.children[1].value,achievement_sat_q2.children[1].value]])\r\n",
+        "# work_life_bal_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [work_life_bal_sat_q1.children[1].value,work_life_bal_sat_q2.children[1].value]])\r\n",
         "\r\n",
-        "\r\n"
+        "\r\n",
+        "import plotly.graph_objects as go\r\n"
       ],
-      "execution_count": 108,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "10\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 112,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4805,21 +4794,96 @@
       "metadata": {
         "id": "igJLCk-VVKJW",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 542
         },
-        "outputId": "e25c8ec1-8450-4f44-b389-70929a5196b8"
+        "outputId": "af969c30-9b8f-4c79-f80f-8d93527b6453"
       },
       "source": [
-        ""
+        "x_axis_labels=['Intention to Leave','Overall Satisfaction','Learning Satisfaction',\"Boss Satisfaction\",\"Salary Satisfaction\",\"Social Satisfaction\",\"Achievement Satisfaction\",\"Work-life Balance Satisfaction\"]\r\n",
+        "colors = [\"Red\",\"Blue\",\"Green\",\"Yellow\",\"Orange\",\"Black\",\"Purple\",\"Brown\"]\r\n",
+        "\r\n",
+        "fig = go.Figure()\r\n",
+        "fig.add_trace(go.Bar(x=x_axis_labels,\r\n",
+        "                     y=[intention_to_leave,overall_sat,learning_sat,boss_sat,salary_sat,social_sat,achievement_sat,work_life_bal_sat],\r\n",
+        "                     opacity=0.5,\r\n",
+        "                     marker_color=colors,\r\n",
+        "                     name=\"Personal Score\",\r\n",
+        "                     text=x_axis_labels,\r\n",
+        "                     hoverinfo = \"text\",\r\n",
+        "                     showlegend=False))\r\n",
+        "\r\n",
+        "fig.add_trace(go.Scatter(x=x_axis_labels,\r\n",
+        "                         y=[5,4,3,5,4,3,2,1],\r\n",
+        "                         marker_color=\"black\",\r\n",
+        "                         name=\"Population Mean\",\r\n",
+        "                         text=['Population Mean','Population Mean','Population Mean','Population Mean','Population Mean','Population Mean','Population Mean','Population Mean',],\r\n",
+        "                         hoverinfo = 'text',\r\n",
+        "                         showlegend=False))\r\n",
+        "fig.update_yaxes(range=[0, 12])\r\n",
+        "fig.update_layout(template=\"none\", title=\"Job Satisfaction Profile\")\r\n",
+        "fig.show()"
       ],
-      "execution_count": 94,
+      "execution_count": 133,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "0.443\n"
-          ],
-          "name": "stdout"
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<html>\n",
+              "<head><meta charset=\"utf-8\" /></head>\n",
+              "<body>\n",
+              "    <div>\n",
+              "            <script src=\"https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_SVG\"></script><script type=\"text/javascript\">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}</script>\n",
+              "                <script type=\"text/javascript\">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>\n",
+              "        <script src=\"https://cdn.plot.ly/plotly-latest.min.js\"></script>    \n",
+              "            <div id=\"b34b631d-a479-4fb9-8f91-b010a8fe1e54\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+              "            <script type=\"text/javascript\">\n",
+              "                \n",
+              "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
+              "                    \n",
+              "                if (document.getElementById(\"b34b631d-a479-4fb9-8f91-b010a8fe1e54\")) {\n",
+              "                    Plotly.newPlot(\n",
+              "                        'b34b631d-a479-4fb9-8f91-b010a8fe1e54',\n",
+              "                        [{\"hoverinfo\": \"text\", \"marker\": {\"color\": [\"Red\", \"Blue\", \"Green\", \"Yellow\", \"Orange\", \"Black\", \"Purple\", \"Brown\"]}, \"name\": \"Personal Score\", \"opacity\": 0.5, \"showlegend\": false, \"text\": [\"Intention to Leave\", \"Overall Satisfaction\", \"Learning Satisfaction\", \"Boss Satisfaction\", \"Salary Satisfaction\", \"Social Satisfaction\", \"Achievement Satisfaction\", \"Work-life Balance Satisfaction\"], \"type\": \"bar\", \"x\": [\"Intention to Leave\", \"Overall Satisfaction\", \"Learning Satisfaction\", \"Boss Satisfaction\", \"Salary Satisfaction\", \"Social Satisfaction\", \"Achievement Satisfaction\", \"Work-life Balance Satisfaction\"], \"y\": [10, 10, 10, 10, 10, 10, 10, 10]}, {\"hoverinfo\": \"text\", \"marker\": {\"color\": \"black\"}, \"name\": \"Population Mean\", \"showlegend\": false, \"text\": [\"Population Mean\", \"Population Mean\", \"Population Mean\", \"Population Mean\", \"Population Mean\", \"Population Mean\", \"Population Mean\", \"Population Mean\"], \"type\": \"scatter\", \"x\": [\"Intention to Leave\", \"Overall Satisfaction\", \"Learning Satisfaction\", \"Boss Satisfaction\", \"Salary Satisfaction\", \"Social Satisfaction\", \"Achievement Satisfaction\", \"Work-life Balance Satisfaction\"], \"y\": [5, 4, 3, 5, 4, 3, 2, 1]}],\n",
+              "                        {\"template\": {\"data\": {\"scatter\": [{\"type\": \"scatter\"}]}}, \"title\": {\"text\": \"Job Satisfaction Profile\"}, \"yaxis\": {\"range\": [0, 12]}},\n",
+              "                        {\"responsive\": true}\n",
+              "                    ).then(function(){\n",
+              "                            \n",
+              "var gd = document.getElementById('b34b631d-a479-4fb9-8f91-b010a8fe1e54');\n",
+              "var x = new MutationObserver(function (mutations, observer) {{\n",
+              "        var display = window.getComputedStyle(gd).display;\n",
+              "        if (!display || display === 'none') {{\n",
+              "            console.log([gd, 'removed!']);\n",
+              "            Plotly.purge(gd);\n",
+              "            observer.disconnect();\n",
+              "        }}\n",
+              "}});\n",
+              "\n",
+              "// Listen for the removal of the full notebook cells\n",
+              "var notebookContainer = gd.closest('#notebook-container');\n",
+              "if (notebookContainer) {{\n",
+              "    x.observe(notebookContainer, {childList: true});\n",
+              "}}\n",
+              "\n",
+              "// Listen for the clearing of the current output cell\n",
+              "var outputEl = gd.closest('.output');\n",
+              "if (outputEl) {{\n",
+              "    x.observe(outputEl, {childList: true});\n",
+              "}}\n",
+              "\n",
+              "                        })\n",
+              "                };\n",
+              "                \n",
+              "            </script>\n",
+              "        </div>\n",
+              "</body>\n",
+              "</html>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
