--- a/Colab_github_test.ipynb
+++ b/Colab_github_test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Colab_github_test.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNmZRiF8y9A9RoGABopUkZD",
+      "authorship_tag": "ABX9TyPx2AOQU8AiUSNRYpM+5bBH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4288,7 +4288,7 @@
       "source": [
         "#@title <center> Import Libraries </center>\r\n",
         "\r\n",
-        "\r\n",
+        "import plotly.graph_objects as go\r\n",
         "import ipywidgets as widgets\r\n",
         "import numpy as np\r\n",
         "import torch\r\n",
@@ -4300,7 +4300,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 236,
@@ -4315,6 +4314,7 @@
             "8b4c6c57a4de4f39800f0fc845d19b60"
           ]
         },
+        "cellView": "form",
         "id": "6j37AoG2zeiK",
         "outputId": "c3b15298-cc71-4a7b-b0c3-369ace726157"
       },
@@ -5058,17 +5058,7 @@
         "id": "vCegmZuGeht-"
       },
       "source": [
-        "# intention_to_leave = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [intention_to_leave_q1.children[1].value,intention_to_leave_q2.children[1].value]])\r\n",
-        "# overall_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [overall_sat_q1.children[1].value,overall_sat_q2.children[1].value]])\r\n",
-        "# learning_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [learning_sat_q1.children[1].value,learning_sat_q2.children[1].value]])\r\n",
-        "# boss_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [boss_sat_q1.children[1].value,boss_sat_q2.children[1].value]])\r\n",
-        "# salary_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [salary_sat_q1.children[1].value,salary_sat_q2.children[1].value]])\r\n",
-        "# social_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [social_sat_q1.children[1].value,social_sat_q2.children[1].value]])\r\n",
-        "# achievement_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [achievement_sat_q1.children[1].value,achievement_sat_q2.children[1].value]])\r\n",
-        "# work_life_bal_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [work_life_bal_sat_q1.children[1].value,work_life_bal_sat_q2.children[1].value]])\r\n",
-        "\r\n",
-        "\r\n",
-        "import plotly.graph_objects as go\r\n"
+        "\r\n"
       ],
       "execution_count": 9,
       "outputs": []
@@ -5080,6 +5070,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "cellView": "form",
         "outputId": "607a8c59-2762-4da8-979f-9dd0f4a2f063"
       },
       "source": [
@@ -5102,12 +5093,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oZN8IJ3rpu06",
-        "outputId": "0c48b083-9dc5-4249-cc59-05b654b69e1e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        }
+        },
+        "cellView": "form",
+        "id": "oZN8IJ3rpu06",
+        "outputId": "0c48b083-9dc5-4249-cc59-05b654b69e1e"
       },
       "source": [
         "#@title <center> Results 2 </center>\r\n",
@@ -5223,9 +5215,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 542
         },
+        "cellView": "form",
         "outputId": "548676f3-7b54-412b-ed31-1ee6cc842392"
       },
       "source": [
+        "#@title <center> Results 3 </center>\r\n",
+        "\r\n",
         "x_axis_labels=['Intention to Leave','Overall Satisfaction','Learning Satisfaction',\"Boss Satisfaction\",\"Salary Satisfaction\",\"Social Satisfaction\",\"Achievement Satisfaction\",\"Work-life Balance Satisfaction\"]\r\n",
         "colors = [\"Red\",\"Blue\",\"Green\",\"Yellow\",\"Orange\",\"Black\",\"Purple\",\"Brown\"]\r\n",
         "\r\n",
@@ -5316,63 +5311,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vRwn5J1ZeKAI"
-      },
-      "source": [
-        "input = torch.FloatTensor([answers_list_num])\r\n",
-        "\r\n",
-        "#input = input.to(device)\r\n",
-        "\r\n",
-        "output = loaded_model(input)\r\n",
-        "\r\n",
-        "output = torch.sigmoid(output)\r\n",
-        "\r\n",
-        "output = output.detach().numpy().round(decimals=3)"
-      ],
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "K415RR7Xxl3o",
-        "outputId": "3b6623ca-9f07-4697-b4a9-674e8eba7894"
-      },
-      "source": [
-        "print(output)"
-      ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[0.]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GY_p9uXtySaX"
-      },
-      "source": [
-        "# Job Satisfaction Profile\r\n",
-        "\r\n",
-        "# Probabily of Leaving\r\n",
-        "\r\n",
-        "# Comparison with Others"
-      ],
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "gKjFZmioiNKj",
         "cellView": "form"
       },
@@ -5393,6 +5331,15 @@
         "# )\r\n",
         "#         ],\r\n",
         "#         layout=widgets.Layout(width='100%', display='flex',align_items='center'))\r\n",
+        "\r\n",
+        "# intention_to_leave = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [intention_to_leave_q1.children[1].value,intention_to_leave_q2.children[1].value]])\r\n",
+        "# overall_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [overall_sat_q1.children[1].value,overall_sat_q2.children[1].value]])\r\n",
+        "# learning_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [learning_sat_q1.children[1].value,learning_sat_q2.children[1].value]])\r\n",
+        "# boss_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [boss_sat_q1.children[1].value,boss_sat_q2.children[1].value]])\r\n",
+        "# salary_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [salary_sat_q1.children[1].value,salary_sat_q2.children[1].value]])\r\n",
+        "# social_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [social_sat_q1.children[1].value,social_sat_q2.children[1].value]])\r\n",
+        "# achievement_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [achievement_sat_q1.children[1].value,achievement_sat_q2.children[1].value]])\r\n",
+        "# work_life_bal_sat = sum([5 if answer == 'Agree' else 4 if answer == 'Somewhat Agree' else 3 if answer == 'Neither agree nor disagree' else 2 if answer == 'Somewhat Disagree' else 1 for answer in [work_life_bal_sat_q1.children[1].value,work_life_bal_sat_q2.children[1].value]])\r\n",
         "\r\n",
         "\r\n",
         "\r\n",
